admin page graph corrections

--- a/Congress/index.html
+++ b/Congress/index.html
@@ -122,7 +122,7 @@
 
 		<div class="accordion-container">
 
-                <div class="">
+                <div>
                 	<p class="popup-btn_blue">12-14 жовтня 2021 року під егідою Міністерства охорони здоров’я України, Національної академії медичних наук України, Асоціації педіатрів України, ДУ «Інститут педіатрії, акушерства та гінекології НАМН України», Національного медичного університету імені О.О. Богомольця, Національного університету охорони здоров’я України імені П.Л.Шупика, відбудеться довгоочікувана подія – ХV Конгрес педіатрів України «Актуальні проблеми педіатрії».</p>
                 </div>
                 <div class="panel">
