admin page graph corrections

--- a/neiroplant-new/index.html
+++ b/neiroplant-new/index.html
@@ -158,7 +158,7 @@
 
 <div class="container-5">
     <div class="container-5_inner">
-        <h2>Переваги² препарату<br>нейроплант<sup>®</sup></h2>
+        <h2>Переваги² препарату<br>НЕЙРОПЛАНТ<sup>®</sup></h2>
         <div class="container-5_plates">
             <div class="container-5_plate">
                 <p>Покращує настрій</p>
@@ -193,7 +193,7 @@
 <div class="container-3">
     <div class="container-3_inner">
         <p>
-            <b>Нейроплант<sup>®</sup></b> — німецький лікарський фітопрепарат на основі стандартизованого екстракту звіробою WS 5570, збагаченого гіперфорином, має виражений антидепресивний ефект і <b>допомагає відновити біологічний баланс в нервових клітинах</b>.
+            <b>НЕЙРОПЛАНТ<sup>®</sup></b> — німецький лікарський фітопрепарат на основі стандартизованого екстракту звіробою WS 5570, збагаченого гіперфорином, має виражений антидепресивний ефект і <b>допомагає відновити біологічний баланс в нервових клітинах</b>.
         </p>
     </div>
 </div>
@@ -218,7 +218,7 @@
 <div class="container-3">
     <div class="container-3_inner">
         <p>
-            <b>Нейроплант<sup>®</sup></b> продемонстрував зіставну ефективність та кращий профіль безпеки² в порівнянні з іншими антидепресантами. </b>.
+            <b>НЕЙРОПЛАНТ<sup>®</sup></b> продемонстрував зіставну ефективність та кращий профіль безпеки² в порівнянні з іншими антидепресантами. </b>.
         </p>
     </div>
 </div>
@@ -340,7 +340,7 @@
                 <div class="panel">
                     <p>
                         Класифікувати депресію та обрати оптимальний метод лікування допоможуть фахівці відповідного профілю. В залежності від ступеню важкості депресії, призначають медикаментозне чи психотерапевтичне лікування, або поєднують обидва способи.   
-Депресивні епізоди легкого ступеня лікує препарат Нейроплант<sup>®</sup>.
+Депресивні епізоди легкого ступеня лікує препарат НЕЙРОПЛАНТ<sup>®</sup>.
                     </p>
                 </div>
             </div>
@@ -459,7 +459,7 @@
                   <div class="logo1"></div>
                   <div class="vita-footer_text">
                       Реклама лікарського засобу. Відпускається без рецепту. Перед застосуванням обов’язково ознайомтеся з інструкцією і проконсультуйтеся із лікарем. Зберігати у недоступному для дітей місці. Є протипоказання і побічні реакції.
-Нейроплант® таблетки, вкриті оболонкою, по 20 таблеток у блістері Р.П. МОЗ України UA/0414/01/01 від 02.01.2019. 
+НЕЙРОПЛАНТ® таблетки, вкриті оболонкою, по 20 таблеток у блістері Р.П. МОЗ України UA/0414/01/01 від 02.01.2019. 
 
 
                         <br>
@@ -469,7 +469,7 @@
 
 <strong>Ексклюзивний дистриб’ютор в Україні</strong> ПрАТ «Натурфарм», вул. Лісна, 30-А, м. Київ, Пуща-Водиця, 04075,
 тел.: (044) 401–81–03. 
-                     <br>Якщо Ви хочете повідомити про виникнення побічної реакції і/або маєте запитання стосовно медичної інформації і/або скарги на якість лікарського засобу Нейроплант®, будь ласка, надсилайте листа на електронну адресу: pharmacovigilance-ua@alpenpharma.com».
+                     <br>Якщо Ви хочете повідомити про виникнення побічної реакції і/або маєте запитання стосовно медичної інформації і/або скарги на якість лікарського засобу НЕЙРОПЛАНТ®, будь ласка, надсилайте листа на електронну адресу: pharmacovigilance-ua@alpenpharma.com».
 
                   </div>
                   <div class="logo2"></div>
