--- a/neiroplant-new/index-ru.html
+++ b/neiroplant-new/index-ru.html
@@ -193,7 +193,7 @@
 <div class="container-3">
     <div class="container-3_inner">
         <p>
-            <b>Нейроплант<sup>®</sup></b> — немецкий лекарственный фитопрепарат на основе стандартизированного экстракта зверобоя WS5570, обогащенного гиперфорином, имеет выраженный антидепрессивный эффект и <b>помогает восстановить биологический баланс в нервных клетках.</b>.
+            <b>НЕЙРОПЛАНТ<sup>®</sup></b> — немецкий лекарственный фитопрепарат на основе стандартизированного экстракта зверобоя WS5570, обогащенного гиперфорином, имеет выраженный антидепрессивный эффект и <b>помогает восстановить биологический баланс в нервных клетках.</b>.
         </p>
     </div>
 </div>
@@ -218,7 +218,7 @@
 <div class="container-3">
     <div class="container-3_inner">
         <p>
-            <b>Нейроплант<sup>®</sup></b> продемонстрировал сопоставимую эффективность и лучший профиль безопасности³ в сравнении с другими антидепрессантами.</b>.
+            <b>НЕЙРОПЛАНТ<sup>®</sup></b> продемонстрировал сопоставимую эффективность и лучший профиль безопасности³ в сравнении с другими антидепрессантами.</b>.
         </p>
     </div>
 </div>
@@ -339,7 +339,7 @@
                 </div>
                 <div class="panel">
                     <p>
-                        Классифицировать депрессию и выбрать оптимальный метод лечения помогут специалисты соответствующего профиля. В зависимости от степени тяжести депрессии, назначают медикаментозное или психотерапевтическое лечение, или сочетают оба способа. Депрессивные эпизоды легкой степени лечит препарат Нейроплант<sup>®</sup>.
+                        Классифицировать депрессию и выбрать оптимальный метод лечения помогут специалисты соответствующего профиля. В зависимости от степени тяжести депрессии, назначают медикаментозное или психотерапевтическое лечение, или сочетают оба способа. Депрессивные эпизоды легкой степени лечит препарат НЕЙРОПЛАНТ<sup>®</sup>.
                     </p>
                 </div>
             </div>
@@ -454,7 +454,7 @@
                   <div class="logo1"></div>
                   <div class="vita-footer_text">
                       Реклама лікарського засобу. Відпускається без рецепту. Перед застосуванням обов’язково ознайомтеся з інструкцією і проконсультуйтеся із лікарем. Зберігати у недоступному для дітей місці. Є протипоказання і побічні реакції.
-Нейроплант® таблетки, вкриті оболонкою, по 20 таблеток у блістері Р.П. МОЗ України UA/0414/01/01 від 02.01.2019. 
+НЕЙРОПЛАНТ® таблетки, вкриті оболонкою, по 20 таблеток у блістері Р.П. МОЗ України UA/0414/01/01 від 02.01.2019. 
 
 
                         <br>
@@ -464,7 +464,7 @@
 
 <strong>Ексклюзивний дистриб’ютор в Україні</strong> ПрАТ «Натурфарм», вул. Лісна, 30-А, м. Київ, Пуща-Водиця, 04075,
 тел.: (044) 401–81–03. 
-                     <br>Якщо Ви хочете повідомити про виникнення побічної реакції і/або маєте запитання стосовно медичної інформації і/або скарги на якість лікарського засобу Нейроплант®, будь ласка, надсилайте листа на електронну адресу: pharmacovigilance-ua@alpenpharma.com».
+                     <br>Якщо Ви хочете повідомити про виникнення побічної реакції і/або маєте запитання стосовно медичної інформації і/або скарги на якість лікарського засобу НЕЙРОПЛАНТ®, будь ласка, надсилайте листа на електронну адресу: pharmacovigilance-ua@alpenpharma.com».
 
                   </div>
                   <div class="logo2"></div>
