admin page graph corrections

--- a/neiroplant-new/index-ru.html
+++ b/neiroplant-new/index-ru.html
@@ -454,7 +454,7 @@
                   <div class="logo1"></div>
                   <div class="vita-footer_text">
                       Реклама лікарського засобу. Відпускається без рецепту. Перед застосуванням обов’язково ознайомтеся з інструкцією і проконсультуйтеся із лікарем. Зберігати у недоступному для дітей місці. Є протипоказання і побічні реакції.
-НЕЙРОПЛАНТ® таблетки, вкриті оболонкою, по 20 таблеток у блістері Р.П. МОЗ України UA/0414/01/01 від 02.01.2019. 
+<br>НЕЙРОПЛАНТ® таблетки, вкриті оболонкою, по 20 таблеток у блістері Р.П. МОЗ України UA/0414/01/01 від 02.01.2019. 
 
 
                         <br>
@@ -463,7 +463,7 @@
 <strong>Ексклюзивний представник в Україні:</strong> «Альпен Фарма АГ» (Alpen Pharma AG), Берн, Швейцарія.<br>
 
 <strong>Ексклюзивний дистриб’ютор в Україні</strong> ПрАТ «Натурфарм», вул. Лісна, 30-А, м. Київ, Пуща-Водиця, 04075,
-тел.: (044) 401–81–03. 
+<br>тел.: (044) 401–81–03. 
                      <br>Якщо Ви хочете повідомити про виникнення побічної реакції і/або маєте запитання стосовно медичної інформації і/або скарги на якість лікарського засобу НЕЙРОПЛАНТ®, будь ласка, надсилайте листа на електронну адресу: pharmacovigilance-ua@alpenpharma.com».
 
                   </div>
