admin page graph corrections

--- a/neiroplant-new/index.html
+++ b/neiroplant-new/index.html
@@ -354,48 +354,34 @@
                         В залежності від тривалості, часу дії, ступеня тяжкості і частоти, розрізняють легку, середню та тяжку форми депресії.
                     </p>
                     <p>
-                        Депресивний епізод  
-
-— У людини від кількох тижнів і до року спостерігається пригнічений настрій.  
+                        <strong>Депресивний епізод:</strong> у людини від кількох тижнів і до року спостерігається пригнічений настрій.  
 
 — Знижена здатність радіти, отримувати задоволення від улюблених справ. Навіть мінімальні навантаження викликають сильну втому. Зазвичай порушується сон і апетит.  
 Депресивні епізоди бувають легкі, помірні і тяжкі в залежності від кількості та вираженості симптомів.  
                     </p>
                     <p>
-                        Помірна або тяжка депресія  
-
-— Погіршення настрою у більшості життєвих ситуацій, в тому випадку і позитивних протягом 2 тижнів.  
+                        <strong>Помірна або тяжка депресія:</strong> погіршення настрою у більшості життєвих ситуацій, в тому випадку і позитивних протягом 2 тижнів.  
 
 — Такий стан супроводжується втратою інтересу до того, що раніше приносило задоволення, низькою самооцінкою, браком енергії, болями у тілі без вагомої причини.  
 Помірна або тяжка депресія істотно впливає на всі сторони життя людини: від повсякденних справ до роботи та особистого життя.  
                     </p>
                     <p>
-                        Рекурентний депресивний розлад  
-
-— Серія депресивних епізодів, що повторюються.  
+                        <strong>Рекурентний депресивний розлад:</strong> cерія депресивних епізодів, що повторюються.  
 — Початок епізоду може мати короткий «спалах» та більш гострий початок, або навпаки, змазаний.  
                     </p>
                     <p>
-                        Біполярний афективний розлад   
-
-— При біполярному афективному розладі депресія виникає після періоду, коли людині здається, що краще не буває.   
+                        <strong>Біполярний афективний розлад:</strong> При біполярному афективному розладі депресія виникає після періоду, коли людині здається, що краще не буває.   
 
 — Супроводжується зміною фаз: чергуванням депресії та покращеного  настрою. Життя, як на «гойдалці»: вгору — людина переповнена енергією та емоціями, занадто підвищений настрій та активність, вниз — пригніченість, роздратованість, нервове напруження.  
                     </p>
                     <p>
-                        Післяпологова депресія  
-
-— Депресивний стан, з яким може стикнутися жінка протягом кількох місяців після народження дитини. Зміна гормонального фону, хронічне недосипання, надмірне почуття відповідальності і страх, якщо щось піде не так, —достатня кількість передумов для виникнення депресивного розладу.
+                        <strong>Післяпологова депресія:</strong> Депресивний стан, з яким може стикнутися жінка протягом кількох місяців після народження дитини. Зміна гормонального фону, хронічне недосипання, надмірне почуття відповідальності і страх, якщо щось піде не так, —достатня кількість передумов для виникнення депресивного розладу.
                     </p>
                     <p>
-                        Сезонна депресія   
-
-— Погіршення настрою, що має сезонний характер. Сезонний афективний розлад частіше розвивається осінню або зимою. Це означає, що в ці пори роки людина, яка страждає на депресію, в цей період страждає ще більше, ніж в інший час. А після закінчення сезону, у людини нормалізується стан.  
+                        <strong>Сезонна депресія:<strong> Погіршення настрою, що має сезонний характер. Сезонний афективний розлад частіше розвивається осінню або зимою. Це означає, що в ці пори роки людина, яка страждає на депресію, в цей період страждає ще більше, ніж в інший час. А після закінчення сезону, у людини нормалізується стан.  
                     </p>
                     <p>
-                        Психотичний розлад   
-
-Стан, коли у людини спостерігаються не тільки симптоми депресії, а і ознаки психозу: галюцинації, дезорієнтація, порушення мислення.  
+                        <strong>Психотичний розлад:</strong> Стан, коли у людини спостерігаються не тільки симптоми депресії, а і ознаки психозу: галюцинації, дезорієнтація, порушення мислення.  
                     </p>
                 </div>
             </div>
