--- a/neiroplant-new/index-ru.html
+++ b/neiroplant-new/index-ru.html
@@ -353,44 +353,32 @@
                         В зависимости от продолжительности, времени действия, степени тяжести и частоты, различают легкую, среднюю и тяжелую формы депрессии. 
                     </p>
                     <p>
-                        Депрессивный эпизод 
-
-— У человека от нескольких недель до года наблюдается подавленное настроение. 
+                        <strong>Депрессивный эпизод:</strong> У человека от нескольких недель до года наблюдается подавленное настроение. 
 — Снижена способность радоваться, получать удовольствие от любимых дел. Даже минимальные нагрузки вызывают сильную усталость. Обычно нарушается сон и аппетит. 
 
 Депрессивные эпизоды бывают легкие, умеренные и тяжелые в зависимости от количества и выраженности симптомов.  
                     </p>
                     <p>
-                        Умеренная или тяжелая депрессия 
-
-— Ухудшение настроения в большинстве жизненных ситуаций, в том случае и положительных в течение 2 недель. 
+                        <strong>Умеренная или тяжелая депрессия:</strong> Ухудшение настроения в большинстве жизненных ситуаций, в том случае и положительных в течение 2 недель. 
 —Такое состояние сопровождается потерей интереса к тому, что раньше доставляло удовольствие, низкой самооценкой, нехваткой энергии, болями в теле без веской причины. 
 Умеренная или тяжелая депрессия существенно влияет на все стороны жизни человека: от повседневных дел к работе и личной жизни. 
                     </p>
                     <p>
-                        Рекуррентное депрессивное расстройство 
-
-— Серия депрессивных эпизодов, которые повторяются. 
+                        <strong>Рекуррентное депрессивное расстройство:</strong> Серия депрессивных эпизодов, которые повторяются. 
 — Начало эпизода может иметь короткий «вспышка» и более острое начало, или наоборот, смазанный. 
                     </p>
                     <p>
-                        Биполярное аффективное расстройство 
-
-— При биполярном аффективном расстройстве депрессия возникает после периода, когда человеку кажется, что лучше не бывает. 
+                        <strong>Биполярное аффективное расстройство:</strong> При биполярном аффективном расстройстве депрессия возникает после периода, когда человеку кажется, что лучше не бывает. 
 — Сопровождается изменением фаз: чередованием депрессии и улучшенного настроения. Жизнь, как на «качелях»: вверх — человек переполнен энергией и эмоциями, слишком повышенное настроение и активность, вниз — подавленность, раздражительность, нервное напряжение. 
                     </p>
                     <p>
-                        Послеродовая депрессия 
-
-— Депрессивное состояние, с которым может столкнуться женщина в течение нескольких месяцев после рождения ребенка. Изменение гормонального фона, хроническое недосыпание, чрезмерное чувство ответственности и страх, если что-то пойдет не так, —достаточное количество предпосылок для возникновения депрессивного расстройства. 
+                        <strong>Послеродовая депрессия:</strong> Депрессивное состояние, с которым может столкнуться женщина в течение нескольких месяцев после рождения ребенка. Изменение гормонального фона, хроническое недосыпание, чрезмерное чувство ответственности и страх, если что-то пойдет не так, —достаточное количество предпосылок для возникновения депрессивного расстройства. 
                     </p>
                     <p>
-                        Сезонная депрессия 
-
-— Ухудшение настроения, имеет сезонный характер. Сезонное аффективное расстройство чаще развивается осенью или зимой. Это означает, что в эти поры года человек, страдающий депрессией, в этот период страдает еще больше, чем в другое время. А по окончании сезона, у человека нормализуется состояние.  
+                        <strong>Сезонная депрессия:</strong> Ухудшение настроения, имеет сезонный характер. Сезонное аффективное расстройство чаще развивается осенью или зимой. Это означает, что в эти поры года человек, страдающий депрессией, в этот период страдает еще больше, чем в другое время. А по окончании сезона, у человека нормализуется состояние.  
                     </p>
                     <p>
-                        Психическое расстройство 
+                        <strong>Психическое расстройство:<strong> 
 Состояние, когда у человека наблюдаются не только симптомы депрессии, а и признаки психоза: галлюцинации, дезориентация, нарушение мышления. 
                     </p>
                 </div>
