--- a/neiroplant-new/index.html
+++ b/neiroplant-new/index.html
@@ -370,18 +370,18 @@
 — Початок епізоду може мати короткий «спалах» та більш гострий початок, або навпаки, змазаний.  
                     </p>
                     <p>
-                        <strong>Біполярний афективний розлад:</strong> При біполярному афективному розладі депресія виникає після періоду, коли людині здається, що краще не буває.   
+                        <strong>Біполярний афективний розлад:</strong> при біполярному афективному розладі депресія виникає після періоду, коли людині здається, що краще не буває.   
 
 — Супроводжується зміною фаз: чергуванням депресії та покращеного  настрою. Життя, як на «гойдалці»: вгору — людина переповнена енергією та емоціями, занадто підвищений настрій та активність, вниз — пригніченість, роздратованість, нервове напруження.  
                     </p>
                     <p>
-                        <strong>Післяпологова депресія:</strong> Депресивний стан, з яким може стикнутися жінка протягом кількох місяців після народження дитини. Зміна гормонального фону, хронічне недосипання, надмірне почуття відповідальності і страх, якщо щось піде не так, —достатня кількість передумов для виникнення депресивного розладу.
+                        <strong>Післяпологова депресія:</strong> депресивний стан, з яким може стикнутися жінка протягом кількох місяців після народження дитини. Зміна гормонального фону, хронічне недосипання, надмірне почуття відповідальності і страх, якщо щось піде не так, —достатня кількість передумов для виникнення депресивного розладу.
                     </p>
                     <p>
-                        <strong>Сезонна депресія:<strong> Погіршення настрою, що має сезонний характер. Сезонний афективний розлад частіше розвивається осінню або зимою. Це означає, що в ці пори роки людина, яка страждає на депресію, в цей період страждає ще більше, ніж в інший час. А після закінчення сезону, у людини нормалізується стан.  
+                        <strong>Сезонна депресія:</strong> погіршення настрою, що має сезонний характер. Сезонний афективний розлад частіше розвивається осінню або зимою. Це означає, що в ці пори роки людина, яка страждає на депресію, в цей період страждає ще більше, ніж в інший час. А після закінчення сезону, у людини нормалізується стан.  
                     </p>
                     <p>
-                        <strong>Психотичний розлад:</strong> Стан, коли у людини спостерігаються не тільки симптоми депресії, а і ознаки психозу: галюцинації, дезорієнтація, порушення мислення.  
+                        <strong>Психотичний розлад:</strong> стан, коли у людини спостерігаються не тільки симптоми депресії, а і ознаки психозу: галюцинації, дезорієнтація, порушення мислення.  
                     </p>
                 </div>
             </div>
