admin page graph corrections

--- a/neiroplant-new/index-ru.html
+++ b/neiroplant-new/index-ru.html
@@ -378,7 +378,7 @@
                         <strong>Сезонная депрессия:</strong> ухудшение настроения, имеет сезонный характер. Сезонное аффективное расстройство чаще развивается осенью или зимой. Это означает, что в эти поры года человек, страдающий депрессией, в этот период страдает еще больше, чем в другое время. А по окончании сезона, у человека нормализуется состояние.  
                     </p>
                     <p>
-                        <strong>Психическое расстройство:<strong> 
+                        <strong>Психическое расстройство:</strong> 
 состояние, когда у человека наблюдаются не только симптомы депрессии, а и признаки психоза: галлюцинации, дезориентация, нарушение мышления. 
                     </p>
                 </div>
