admin page graph corrections

--- a/neiroplant-new/index-ru.html
+++ b/neiroplant-new/index-ru.html
@@ -132,7 +132,7 @@
 
 <div class="container-3">
     <div class="container-3_inner">
-        <p><b>Депрессия — это не обычная слабость, или признак лени.</b> Это психоэмоциональное расстройство, которое возникает вследствие химического дисбаланса определенных участков мозга. Если вы заметили в течение двух недель постоянный подавленное настроение, потерю интереса к тому, что ранее доставляло удовольствие, это может быть депрессия.</p> 
+        <p><b>Депрессия — это не обычная слабость, или признак лени.</b> <br>Это психоэмоциональное расстройство, которое возникает вследствие химического дисбаланса определенных участков мозга. Если вы заметили в течение двух недель постоянный подавленное настроение, потерю интереса к тому, что ранее доставляло удовольствие, это может быть депрессия.</p> 
 
             <p>Как и любая другая болезнь, депрессия требует правильного лечения.</p>
     </div>
@@ -147,7 +147,7 @@
 <div class="container-3">
     <div class="container-3_inner">
         <p>
-            Большинство людей имеют предвзятое отношение к депрессии. Чаще всего ее связывают с обычной болезнью, пытаясь «держать себя в руках», «развеяться», «не думать о плохом». Однако следует помнить: если не лечить депрессию, можно потерять работоспособность на месяцы, а то и годы. Для чего ухудшать себе жизнь?
+            Большинство людей имеют предвзятое отношение к депрессии. Чаще всего ее связывают с обычной болезнью, пытаясь «держать себя в руках», «развеяться», <br>«не думать о плохом». Однако следует помнить: если не лечить депрессию, можно потерять работоспособность на месяцы, а то и годы. Для чего ухудшать себе жизнь?
         </p>
     </div>
 </div>
@@ -218,7 +218,7 @@
 <div class="container-3">
     <div class="container-3_inner">
         <p>
-            <b>НЕЙРОПЛАНТ<sup>®</sup></b> продемонстрировал сопоставимую эффективность и лучший профиль безопасности³ в сравнении с другими антидепрессантами.</b>.
+            <b>НЕЙРОПЛАНТ<sup>®</sup></b> продемонстрировал сопоставимую эффективность и лучший профиль безопасности³ в сравнении с другими антидепрессантами.</b>
         </p>
     </div>
 </div>
@@ -354,22 +354,22 @@
                     </p>
                     <p>
                         <strong>Депрессивный эпизод:</strong> у человека от нескольких недель до года наблюдается подавленное настроение. 
-— Снижена способность радоваться, получать удовольствие от любимых дел. Даже минимальные нагрузки вызывают сильную усталость. Обычно нарушается сон и аппетит. 
+Снижена способность радоваться, получать удовольствие от любимых дел. Даже минимальные нагрузки вызывают сильную усталость. Обычно нарушается сон и аппетит. 
 
 Депрессивные эпизоды бывают легкие, умеренные и тяжелые в зависимости от количества и выраженности симптомов.  
                     </p>
                     <p>
                         <strong>Умеренная или тяжелая депрессия:</strong> ухудшение настроения в большинстве жизненных ситуаций, в том случае и положительных в течение 2 недель. 
-—Такое состояние сопровождается потерей интереса к тому, что раньше доставляло удовольствие, низкой самооценкой, нехваткой энергии, болями в теле без веской причины. 
+Такое состояние сопровождается потерей интереса к тому, что раньше доставляло удовольствие, низкой самооценкой, нехваткой энергии, болями в теле без веской причины. 
 Умеренная или тяжелая депрессия существенно влияет на все стороны жизни человека: от повседневных дел к работе и личной жизни. 
                     </p>
                     <p>
                         <strong>Рекуррентное депрессивное расстройство:</strong> серия депрессивных эпизодов, которые повторяются. 
-— Начало эпизода может иметь короткий «вспышка» и более острое начало, или наоборот, смазанный. 
+Начало эпизода может иметь короткий «вспышка» и более острое начало, или наоборот, смазанный. 
                     </p>
                     <p>
                         <strong>Биполярное аффективное расстройство:</strong> при биполярном аффективном расстройстве депрессия возникает после периода, когда человеку кажется, что лучше не бывает. 
-— Сопровождается изменением фаз: чередованием депрессии и улучшенного настроения. Жизнь, как на «качелях»: вверх — человек переполнен энергией и эмоциями, слишком повышенное настроение и активность, вниз — подавленность, раздражительность, нервное напряжение. 
+Сопровождается изменением фаз: чередованием депрессии и улучшенного настроения. Жизнь, как на «качелях»: вверх — человек переполнен энергией и эмоциями, слишком повышенное настроение и активность, вниз — подавленность, раздражительность, нервное напряжение. 
                     </p>
                     <p>
                         <strong>Послеродовая депрессия:</strong> депрессивное состояние, с которым может столкнуться женщина в течение нескольких месяцев после рождения ребенка. Изменение гормонального фона, хроническое недосыпание, чрезмерное чувство ответственности и страх, если что-то пойдет не так, —достаточное количество предпосылок для возникновения депрессивного расстройства. 
@@ -441,8 +441,8 @@
             <div class="vft">
                   <div class="logo1"></div>
                   <div class="vita-footer_text">
-                      Реклама лікарського засобу. Відпускається без рецепту. Перед застосуванням обов’язково ознайомтеся з інструкцією і проконсультуйтеся із лікарем. Зберігати у недоступному для дітей місці. Є протипоказання і побічні реакції.
-<br>НЕЙРОПЛАНТ® таблетки, вкриті оболонкою, по 20 таблеток у блістері Р.П. МОЗ України UA/0414/01/01 від 02.01.2019. 
+                      Реклама лікарського засобу. Відпускається без рецепту. Перед застосуванням обов’язково ознайомтеся з інструкцією і проконсультуйтеся із лікарем. Зберігати у недоступному для дітей місці. <br>Є протипоказання і побічні реакції.
+<br>НЕЙРОПЛАНТ<sup>®</sup> таблетки, вкриті оболонкою, по 20 таблеток у блістері <br>Р.П. МОЗ України UA/0414/01/01 від 02.01.2019. 
 
 
                         <br>
@@ -452,7 +452,7 @@
 
 <strong>Ексклюзивний дистриб’ютор в Україні</strong> ПрАТ «Натурфарм», вул. Лісна, 30-А, м. Київ, Пуща-Водиця, 04075,
 <br>тел.: (044) 401–81–03. 
-                     <br>Якщо Ви хочете повідомити про виникнення побічної реакції і/або маєте запитання стосовно медичної інформації і/або скарги на якість лікарського засобу НЕЙРОПЛАНТ®, будь ласка, надсилайте листа на електронну адресу: pharmacovigilance-ua@alpenpharma.com».
+                     <br>Якщо Ви хочете повідомити про виникнення побічної реакції і/або маєте запитання стосовно медичної інформації і/або скарги на якість лікарського засобу НЕЙРОПЛАНТ<sup>®</sup>, будь ласка, надсилайте листа на електронну адресу: pharmacovigilance-ua@alpenpharma.com».
 
                   </div>
                   <div class="logo2"></div>
