--- a/neiroplant-new/index.html
+++ b/neiroplant-new/index.html
@@ -132,7 +132,7 @@
 
 <div class="container-3">
     <div class="container-3_inner">
-        <p><b>Депресія — це не звичайна слабкість, або ознака ліні.</b> Це психоемоційний розлад, який виникає внаслідок хімічного дисбалансу певних ділянок мозку. Якщо ви помітили протягом двох тижнів постійний пригнічений настрій, втрату цікавості до того, що раніше приносило задоволення, це може бути депресія.</p> 
+        <p><b>Депресія — це не звичайна слабкість, або ознака ліні.</b> <br>Це психоемоційний розлад, який виникає внаслідок хімічного дисбалансу певних ділянок мозку. Якщо ви помітили протягом двох тижнів постійний пригнічений настрій, втрату цікавості до того, що раніше приносило задоволення, це може бути депресія.</p> 
 
             <p>Як і будь-яка інша хвороба, депресія потребує правильного лікування.</p>
     </div>
@@ -356,23 +356,23 @@
                     <p>
                         <strong>Депресивний епізод:</strong> у людини від кількох тижнів і до року спостерігається пригнічений настрій.  
 
-— Знижена здатність радіти, отримувати задоволення від улюблених справ. Навіть мінімальні навантаження викликають сильну втому. Зазвичай порушується сон і апетит.  
+Знижена здатність радіти, отримувати задоволення від улюблених справ. Навіть мінімальні навантаження викликають сильну втому. Зазвичай порушується сон і апетит.  
 Депресивні епізоди бувають легкі, помірні і тяжкі в залежності від кількості та вираженості симптомів.  
                     </p>
                     <p>
                         <strong>Помірна або тяжка депресія:</strong> погіршення настрою у більшості життєвих ситуацій, в тому випадку і позитивних протягом 2 тижнів.  
 
-— Такий стан супроводжується втратою інтересу до того, що раніше приносило задоволення, низькою самооцінкою, браком енергії, болями у тілі без вагомої причини.  
+Такий стан супроводжується втратою інтересу до того, що раніше приносило задоволення, низькою самооцінкою, браком енергії, болями у тілі без вагомої причини.  
 Помірна або тяжка депресія істотно впливає на всі сторони життя людини: від повсякденних справ до роботи та особистого життя.  
                     </p>
                     <p>
                         <strong>Рекурентний депресивний розлад:</strong> cерія депресивних епізодів, що повторюються.  
-— Початок епізоду може мати короткий «спалах» та більш гострий початок, або навпаки, змазаний.  
+Початок епізоду може мати короткий «спалах» та більш гострий початок, або навпаки, змазаний.  
                     </p>
                     <p>
                         <strong>Біполярний афективний розлад:</strong> при біполярному афективному розладі депресія виникає після періоду, коли людині здається, що краще не буває.   
 
-— Супроводжується зміною фаз: чергуванням депресії та покращеного  настрою. Життя, як на «гойдалці»: вгору — людина переповнена енергією та емоціями, занадто підвищений настрій та активність, вниз — пригніченість, роздратованість, нервове напруження.  
+Супроводжується зміною фаз: чергуванням депресії та покращеного  настрою. Життя, як на «гойдалці»: вгору — людина переповнена енергією та емоціями, занадто підвищений настрій та активність, вниз — пригніченість, роздратованість, нервове напруження.  
                     </p>
                     <p>
                         <strong>Післяпологова депресія:</strong> депресивний стан, з яким може стикнутися жінка протягом кількох місяців після народження дитини. Зміна гормонального фону, хронічне недосипання, надмірне почуття відповідальності і страх, якщо щось піде не так, —достатня кількість передумов для виникнення депресивного розладу.
@@ -444,8 +444,8 @@
             <div class="vft">
                   <div class="logo1"></div>
                   <div class="vita-footer_text">
-                      Реклама лікарського засобу. Відпускається без рецепту. Перед застосуванням обов’язково ознайомтеся з інструкцією і проконсультуйтеся із лікарем. Зберігати у недоступному для дітей місці. Є протипоказання і побічні реакції.
-<br>НЕЙРОПЛАНТ® таблетки, вкриті оболонкою, по 20 таблеток у блістері Р.П. МОЗ України UA/0414/01/01 від 02.01.2019. 
+                      Реклама лікарського засобу. Відпускається без рецепту. Перед застосуванням обов’язково ознайомтеся з інструкцією і проконсультуйтеся із лікарем. Зберігати у недоступному для дітей місці. <br>Є протипоказання і побічні реакції.
+<br>НЕЙРОПЛАНТ<sup>®</sup> таблетки, вкриті оболонкою, по 20 таблеток у блістері <br>Р.П. МОЗ України UA/0414/01/01 від 02.01.2019. 
 
 
                         <br>
@@ -455,7 +455,7 @@
 
 <strong>Ексклюзивний дистриб’ютор в Україні</strong> ПрАТ «Натурфарм», вул. Лісна, 30-А, м. Київ, Пуща-Водиця, 04075,
 <br>тел.: (044) 401–81–03. 
-                     <br>Якщо Ви хочете повідомити про виникнення побічної реакції і/або маєте запитання стосовно медичної інформації і/або скарги на якість лікарського засобу НЕЙРОПЛАНТ®, будь ласка, надсилайте листа на електронну адресу: pharmacovigilance-ua@alpenpharma.com».
+                     <br>Якщо Ви хочете повідомити про виникнення побічної реакції і/або маєте запитання стосовно медичної інформації і/або скарги на якість лікарського засобу НЕЙРОПЛАНТ<sup>®</sup>, будь ласка, надсилайте листа на електронну адресу: pharmacovigilance-ua@alpenpharma.com».
 
                   </div>
                   <div class="logo2"></div>
